syntax = "proto3";
option go_package="proto.currency";

service CurrencyService {
  rpc Create(CreateCurrencyRequest) returns (CurrencyProfileResponse);
  rpc Read(SingleCurrencyRequest) returns (CurrencyProfileResponse);
  rpc Update(UpdateCurrencyRequest) returns (SuccessResponse);
  rpc Delete(SingleCurrencyRequest) returns (SuccessResponse);
}

message CreateCurrencyRequest{
  int64 code = 1;
  string name = 2;
  string short_name = 3;
  int64 scale = 4;
  string scale_name = 5;
}

message SingleCurrencyRequest{
  int64 id = 1;
}

message CurrencyProfileResponse{
  int64 id = 1;
  int64 code = 2;
  string name = 3;
  string short_name = 4;
  int64 scale = 5;
  string scale_name = 6;
}

message SuccessResponse{
  string response = 1;
}


message UpdateCurrencyRequest{
  int64 id = 1;
  int64 code = 2;
  string name = 3;
  string short_name = 4;
  int64 scale = 5;
  string scale_name = 6;
}